--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Sunshine</string>
     <string name="action_settings">Settings</string>
+    <string name="action_location">Find location</string>
+    <string name="action_share">Share</string>
     <string name="action_refresh" translatable="false">Refresh</string>
     <string name="title_activity_detail">DetailActivity</string>
     <string name="title_activity_settings">Settings</string>
@@ -8,10 +10,25 @@
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
+    <string name="pref_header_general">General</string>
+
+
     <string name="pref_location">Location</string>
     <string name="pref_location_key" translatable="false">location</string>
-    <string name="pref_location_default" translatable="false">2193734</string>
-    <string name="pref_header_general">General</string>
+    <string name="pref_location_default" translatable="false">Auckland,nz</string>
+
+    <string name="pref_temperature_unit_title">Temperature Unit</string>
+    <string name="pref_temperature_unit_key" translatable="false">units</string>
+    <string name="pref_temperature_unit_default" translatable="false">metric</string>
+
+    <string-array name="pref_temperature_unit_list">
+        <item>Metric</item>
+        <item>Imperial</item>
+    </string-array>
+    <string-array name="pref_temperature_unit_values">
+        <item>metric</item>
+        <item>imperial</item>
+    </string-array>
 
     <string name="pref_title_social_recommendations">Enable social recommendations</string>
     <string name="pref_description_social_recommendations">Recommendations for people to contact
